--- a/index.html
+++ b/index.html
@@ -77,21 +77,17 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>My early years of experience was from my Industrial Training 
-									Program the course "Automobile Technology". After been a graduate
-									and working at several telecommunication firms for two (2) years.
-								    I have developed great interest in data processing and web/software 
-									programinmg which gave me zeal to acquire my first skill and certificate 
-									in Microsoft Excel from UDEMY online class platform,</p>
+									<p>After completion of my first degree (Automobile Technology), 
+									I have developed great interest and useful skills in Data Analysis, 
+									Data Processing and Web Development. My first course as a data 
+									analyst was Analyzing and Visualizing Data with Microsoft Excel (Udemy), 
+									it gave me an insight on how to arrange datasets to get information easily. </p>
+									<a href="https://www.linkedin.com/in/samuel-ajatta-08489718a" class="button">About Me</a>
 								</div>
-								<div class="col-4 col-12-medium">
-									<p> I went ahead to acquire a Diploma in MySQL and Statistics from ALISON
-									online learning platform. I also acquired python programming skills which
-									gave me a egde as a data analyst and a software programmer, I am still looking forward 
-									to acquiring more knowledge and experiece in data processing and optimizing my 
-									career into software programming. I hope to get a chance as entry levelat any
-									firm or industry that aid my career growth.</p>
-								</div>
+
+								<!-- <div class="col-4 col-12-medium">
+									<a href="https://github.com/ajatta-samuel/Data-Cleaning-and-Visualisation-of-Prosper-Loan" class="button">View Project</a>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -356,7 +352,7 @@
 							<ul>
 								<li>Analyzing and Visualizing Data with Microsoft Excel (Udemy)</li>
 								<li>Diploma in Website Development Using HTML and CSS (Alison)</li>
-								<li>Diploma in MySQL and Statistics for Data Analysis (Alison</li>
+								<li>Diploma in MySQL and Statistics for Data Analysis (Alison)</li>
 								<li>Tableau Software (Alison)</li>
 								<li>Advance Diploma in Python Programming (Alison)</li>
 								<li>Data Analytics 1.0 (Lighthall)</li>
