--- a/index.html
+++ b/index.html
@@ -149,6 +149,41 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
+				<!-- <section id="three" class="spotlight style3 left">
+					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Tata Data Visualisation</h2>
+							<p>SQL Queries on excercises from w3resource dataset given and 
+							analyzing the insights gotten from the querying outcome.</p>
+						</header>
+						<p></p>
+						<ul class="actions">
+							<li><a href="https://github.com/ajatta-samuel/SQL-Query-Project" class="button">View Project</a></li>
+						</ul>
+					</div>
+					<a href="#agg" class="goto-next scrolly">Next</a>
+				</section>
+
+				<section id="agg" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/newspaper.jpeg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>News Aggregator</h2>
+							<p>This is a summative python news aggregator which is a Django project which dynamically extracts, 
+								parses, and analyzes the latest technology-related news articles from the New York Times using 
+								Beautiful soup and request module and also uses Newspaper3k to access and store metadata from 
+								the news article, lastly, a natural language processing script that uses TextBlob to extract 
+								the sunjectivity and polarity of a news article.</p>
+						</header>
+						<p></p>
+						<ul class="actions">
+							<li><a href="https://github.com/ajatta-samuel/News-Aggregator" class="button">View Project</a></li>
+						</ul>
+					</div>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</section> -->
+
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
@@ -351,6 +386,7 @@
 						<div class="certificate">
 							<ul>
 								<li>Analyzing and Visualizing Data with Microsoft Excel (Udemy)</li>
+								<li>Data Visualisation: Empowering Business with Effective Insights (Tata)</li>
 								<li>Diploma in Website Development Using HTML and CSS (Alison)</li>
 								<li>Diploma in MySQL and Statistics for Data Analysis (Alison)</li>
 								<li>Tableau Software (Alison)</li>
