--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									Data Processing and Web Development. My first course as a data 
 									analyst was Analyzing and Visualizing Data with Microsoft Excel (Udemy), 
 									it gave me an insight on how to arrange datasets to get information easily. </p>
-									<a href="https://www.linkedin.com/in/samuel-ajatta-08489718a" class="button">About Me</a>
+									<a href="https://www.linkedin.com/in/samuel-ajatta" class="button">About Me</a>
 								</div>
 
 								<!-- <div class="col-4 col-12-medium">
@@ -395,7 +395,7 @@
 								<li>Data Analytics and Visualization Virtual Experience (Accenture)</li>
 							</ul>
 						</div>
-						<a href="https://www.linkedin.com/in/samuel-ajatta-08489718a/details/certifications/" class="button">View Certifcates</a>
+						<a href="https://www.linkedin.com/in/samuel-ajatta/details/certifications/" class="button">View Certifcates</a>
 						
 					</div>
 				</section>
@@ -405,13 +405,13 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/samolu1188" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<!-- <li><a href="https://web.facebook.com/samuel.ajatta2" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-						<li><a href="https://www.linkedin.com/in/samuel-ajatta-08489718a/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/samuel-ajatta/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<li><a href="https://github.com/ajatta-samuel" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<!-- <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://www.linkedin.com/in/samuel-ajatta-08489718a/">Ajatta Samuel</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://www.linkedin.com/in/samuel-ajatta/">Ajatta Samuel</a></li>
 					</ul>
 				</footer>
 
