--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>After completion of my first degree (Automobile Technology), 
-									I have developed great interest and useful skills in Data Analysis, 
-									Data Processing and Web Development. My first course as a data 
-									analyst was Analyzing and Visualizing Data with Microsoft Excel (Udemy), 
-									it gave me an insight on how to arrange datasets to get information easily. </p>
+									<p>I am a dedicated data analyst with hands-on experience in cleaning, 
+				                                        analyzing, and visualizing data using tools like Python, SQL, Tableau, 
+									and Power BI. My background includes working on impactful projects at Accenture and Tata, 
+									where I developed strong analytical and problem-solving skills. 
+									My ability to transform complex datasets into actionable insights 
+									and my commitment to continuous learning make me a strong candidate for any data-driven role.</p>
 									<a href="https://www.linkedin.com/in/samuel-ajatta" class="button">About Me</a>
 								</div>
 
