--- a/index.html
+++ b/index.html
@@ -120,8 +120,13 @@
 					<div class="content">
 						<header>
 							<h2>SQL Query Project</h2>
-							<p>SQL Queries on excercises from w3resource dataset given and 
-							analyzing the insights gotten from the querying outcome.</p>
+							<p>This SQL code contains multiple queries that extract specific data from different tables. 
+								It retrieves information such as American cities with populations over 120,000, 
+								city details by ID, and the names of Japanese cities. Queries also focus on selecting 
+								city names based on specific criteria like cities with even IDs, shortest or longest names, 
+								or names starting and ending with vowels. Additionally, it includes queries that fetch student 
+								names with high marks and employee names ordered alphabetically or based on salary and tenure. 
+								Each query applies specific conditions to efficiently extract targeted data from the database.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
