--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
 					<div class="content">
 						<header>
 							<h2>SQL Query Project</h2>
-							<p>This SQL code contains multiple queries that extract specific data from different tables. 
-								It retrieves information such as American cities with populations over 120,000, 
-								city details by ID, and the names of Japanese cities. Queries also focus on selecting 
-								city names based on specific criteria like cities with even IDs, shortest or longest names, 
-								or names starting and ending with vowels. Additionally, it includes queries that fetch student 
-								names with high marks and employee names ordered alphabetically or based on salary and tenure. 
-								Each query applies specific conditions to efficiently extract targeted data from the database.</p>
+							<p>This SQL code contains several queries that extract data from different tables based on specific conditions. 
+								It retrieves American cities with populations over 120,000, details of a city by ID, and names of Japanese cities. 
+								It also selects city names based on even IDs, shortest or longest names, and those starting or ending with vowels. 
+								Additional queries pull student names with marks above 75, employees' names sorted alphabetically, 
+								and employees with high salaries and short tenure. Each query targets specific 
+								data based on set criteria for efficient extraction.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
