--- a/index.html
+++ b/index.html
@@ -120,12 +120,11 @@
 					<div class="content">
 						<header>
 							<h2>SQL Query Project</h2>
-							<p>This SQL code contains several queries that extract data from different tables based on specific conditions. 
-							It retrieves American cities with populations over 120,000, details of a city by ID, and names of Japanese cities. 
-							It also selects city names based on even IDs, shortest or longest names, and those starting or ending with vowels. 
-							Additional queries pull student names with marks above 75, employees' names sorted alphabetically, 
-							and employees with high salaries and short tenure. Each query targets specific 
-							data based on set criteria for efficient extraction.</p>
+							<p>This SQL code includes several queries that extract data from different tables based on specific 
+							conditions. It retrieves American cities with populations over 120,000, details of a city by ID, 
+							and names of Japanese cities. It also selects city names based on even IDs, shortest or longest 
+							names, and those starting or ending with vowels. Other queries retrieve student names with high 
+							marks and employees' names sorted by salary and tenure.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
