--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
 					<div class="content">
 						<header>
 							<h2>SQL Query Project</h2>
-							<p>This SQL code includes several queries that extract data from different tables based on specific 
-							conditions. It retrieves American cities with populations over 120,000, details of a city by ID, 
-							and names of Japanese cities. It also selects city names based on even IDs, shortest or longest 
-							names, and those starting or ending with vowels. Other queries retrieve student names with high 
-							marks and employees' names sorted by salary and tenure.</p>
+							<p>This SQL code contains queries that extract data from multiple tables under specific conditions. 
+							It retrieves American cities with populations over 120,000, city details by ID, and Japanese city names. 
+							Other queries select city names based on even IDs, name lengths, vowel patterns, and retrieve student names with high
+							marks and employee names sorted by salary and tenure.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
@@ -139,11 +138,10 @@
 					<div class="content">
 						<header>
 							<h2>News Aggregator</h2>
-							<p>This is a summative python news aggregator which is a Django project which dynamically extracts, 
-								parses, and analyzes the latest technology-related news articles from the New York Times using 
-								Beautiful soup and request module and also uses Newspaper3k to access and store metadata from 
-								the news article, lastly, a natural language processing script that uses TextBlob to extract 
-								the sunjectivity and polarity of a news article.</p>
+							<p>This Django project is a Python-based news aggregator that extracts and analyzes technology news from the
+							New York Times using Beautiful Soup and requests. It utilizes Newspaper3k to store article metadata and a natural 
+							language processing script with TextBlob to analyze the subjectivity and polarity of each article, 
+							providing insights on sentiment.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
