--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Prosper Loan Analysis</h2>
-							<p>Prosper loan dataset is a large data-frame with 81 titled columns
-							and 113937 rows which stores in every information of borrowers and their 
-							loans from 2005 - 2016. Python programming language was used in cleaning 
-							the data set and visualizing the insight.</p>
+							<h2>Data Cleaning and Visualization</h2>
+							<p>This Python code analyzes a loan dataset using PANDAS for data management and SEABORN/MATPLOTLIB for visualization. 
+							It focuses on income verification, loan statuses, and yearly loan assignments. The code counts verified vs. non-verified loans with a pie chart, 
+							visualizes loan statuses with a count plot, and shows yearly assignments through another count plot, uncovering trends in the data.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
