--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 					<div class="content">
 						<header>
 							<h2>Data Cleaning and Visualization</h2>
-							<p>This Python code analyzes a loan dataset using PANDAS for data management and SEABORN/MATPLOTLIB for visualization. 
-							It focuses on income verification, loan statuses, and yearly loan assignments. The code counts verified vs. non-verified loans with a pie chart, 
-							visualizes loan statuses with a count plot, and shows yearly assignments through another count plot, uncovering trends in the data.</p>
+							<p>This Python code analyzes a loan dataset using PANDAS and SEABORN/MATPLOTLIB. It explores income 
+							verification through a pie chart, examines loan statuses with a count plot, and visualizes yearly loan 
+							assignments in another count plot. Overall, it effectively highlights trends in the dataset, providing clear insights 
+							into income verification, loan statuses, and yearly distributions.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
