--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
 					<div class="content">
 						<header>
 							<h2>Data Cleaning and Visualization</h2>
-							<p>This Python code analyzes a loan dataset using PANDAS and SEABORN/MATPLOTLIB. It explores income 
-							verification through a pie chart, examines loan statuses with a count plot, and visualizes yearly loan 
-							assignments in another count plot. Overall, it effectively highlights trends in the dataset, providing clear insights 
-							into income verification, loan statuses, and yearly distributions.</p>
+							<p>This Python code analyzes a loan dataset using PANDAS and visualizes findings with SEABORN/MATPLOTLIB. It explores 
+							income verification, loan statuses, and yearly assignments by counting occurrences and creating pie and count plots, 
+							effectively highlighting trends and providing a clear understanding of the dataset through visual representations.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
