--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 					<div class="content">
 						<header>
 							<h2>Data Cleaning and Visualization</h2>
-							<p>This Python code analyzes a loan dataset using PANDAS and visualizes findings with SEABORN/MATPLOTLIB. It explores 
-							income verification, loan statuses, and yearly assignments by counting occurrences and creating pie and count plots, 
-							effectively highlighting trends and providing a clear understanding of the dataset through visual representations.</p>
+							<p>This Python code analyzes a loan dataset using PANDAS and SEABORN/MATPLOTLIB. It examines income verification 
+							through a pie chart, analyzes loan statuses with a count plot, and visualizes yearly loan assignments, providing 
+							insights into trends and enhancing understanding of the dataset through effective visualizations.</p>
 						</header>
 						<p></p>
 						<ul class="actions">
